<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.home.HomeFragment"
        android:label="@string/title_homePage"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_diet"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.diet.DietFragment"
        android:label="@string/title_dietPage"
        tools:layout="@layout/fragment_diet" >
        <action
            android:id="@+id/action_navigation_diet_to_navigation_diet_goal"
            app:destination="@id/navigation_diet_goal" />
        <action
            android:id="@+id/action_navigation_diet_to_navigation_meal"
            app:destination="@id/navigation_meal" />
    </fragment>

    <fragment
        android:id="@+id/navigation_diet_goal"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.diet.DietGoalFragment"
        android:label="Diet Goal"
        tools:layout="@layout/fragment_diet_goals" >
        <action
            android:id="@+id/action_navigation_diet_goal_to_navigation_diet3"
            app:destination="@id/navigation_diet" />
    </fragment>

    <fragment
        android:id="@+id/navigation_meal"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.diet.AddMealFragment"
        android:label="Add Meal"
        tools:layout="@layout/fragment_add_meal" >
        <action
            android:id="@+id/action_navigation_meal_to_navigation_diet3"
            app:destination="@id/navigation_diet" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.account.AccountFragment"
        android:label="@string/title_accountPage"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_editAccount"
            app:destination="@id/editAccount" />
        <action
            android:id="@+id/action_navigation_account_to_reminderFragment"
            app:destination="@id/reminderFragment" />
        <action
            android:id="@+id/action_navigation_account_to_deleteAccount2"
            app:destination="@id/deleteAccount2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_free_weights"
        android:name="com.sheridancollege.cowanjos.advandtermproj.FreeWeightsFragment"
        android:label="Free Weights"
        tools:layout="@layout/fragment_free_weights_fragment" />

    <fragment
        android:id="@+id/navigation_cycling"
        android:name="com.sheridancollege.cowanjos.advandtermproj.CyclingFragment"
        android:label="Cycling"
        tools:layout="@layout/cycling_item" />



    <!-- Navigation Actions -->
    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.workouts.WorkoutFragment"
        android:label="Workout"
        tools:layout="@layout/fragment_workouts">
        <action
            android:id="@+id/action_workoutFragment_to_freeWeightsFragment"
            app:destination="@id/navigation_free_weights" />

        <action
            android:id="@+id/action_workoutFragment_to_cyclingFragment"
            app:destination="@id/navigation_cycling" />
    </fragment>
    <fragment
        android:id="@+id/editAccount"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.account.EditAccount"
        android:label="@string/title_account_edit"
        tools:layout="@layout/fragment_edit_account" >
        <action
            android:id="@+id/action_editAccount_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>
    <fragment
        android:id="@+id/reminderFragment"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.account.reminderFragment"
        android:label="@string/title_account_reminder"
        tools:layout="@layout/fragment_reminder" >
        <action
            android:id="@+id/action_reminderFragment_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>
    <fragment
        android:id="@+id/deleteAccount2"
        android:name="com.sheridancollege.cowanjos.advandtermproj.ui.account.DeleteAccount"
        android:label="@string/title_account_delete"
        tools:layout="@layout/fragment_delete_account" >
        <action
            android:id="@+id/action_deleteAccount2_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

</navigation>